--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -8,7 +8,7 @@
 .header{
     height: 7rem;
     background-color: #fff;
-    border-bottom: var(--color-grey-light-2);
+    border-bottom: 1px solid var(--color-grey-light-2);
     font-size: 1.4rem;
     display: flex;
     justify-content: space-between;
@@ -19,10 +19,13 @@
 }
 .sidebar{
     background-color: var(--color-grey-dark-1);
-
+    display: flex;
+    flex-direction: column;
     flex: 0 0 18%;
+    justify-content: space-between;
 }
 .hotel-view{
     background-color: #fff;
     flex: 1;
+    height: 80rem;
 }
