--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,31 +1,54 @@
-.container{
+.container {
     max-width: 120rem;
     margin: 8rem auto;
     background-color: var(--color-grey-light-2);
     box-shadow: var(--shadow-dark);
     min-height: 50rem;
 }
-.header{
+
+.header {
     height: 7rem;
     background-color: #fff;
-    border-bottom: 1px solid var(--color-grey-light-2);
+    border-bottom: var(--line);
     font-size: 1.4rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.content{
+
+.content {
     display: flex;
 }
-.sidebar{
+
+.sidebar {
     background-color: var(--color-grey-dark-1);
     display: flex;
     flex-direction: column;
     flex: 0 0 18%;
     justify-content: space-between;
 }
-.hotel-view{
+
+.hotel-view {
     background-color: #fff;
     flex: 1;
-    height: 80rem;
+}
+
+.detail {
+    display: flex;
+    padding: 4.5rem;
+    background-color: var(--color-grey-light-1);
+    border-bottom: var(--line);
+}
+
+.description {
+    font-size: 1.4rem;
+    background-color: #fff;
+    box-shadow: var(--shadow-light);
+    padding: 3rem;
+    flex: 0 0 60%;
+    margin-right: 4.5rem;
+}
+
+.user-reviews {
+    flex: 1;
 }
